tests/scan/fixtures/validation/negative/clean_obfs_compile_no_exec/_tool.py
import ast
src = "x = 1 + 2"
tree = ast.parse(src)
print(ast.dump(tree))
